# The_Consortium

./: .gitignore
core/consortium_core/: Cargo.toml  build.rs
core/consortium_core/src/: brainstem.rs  lib.rs  llm.rs  main.rs  mlx_core.rs  vector_engine.rs
core/consortium_core/src/ane/: ane_bridge.h  kernels.rs
core/consortium_core/src/crypto/: akkokanika_gateway.rs  akkokanika_openapi.json  mod.rs
core/consortium_core/src/llm/: automata.rs
core/consortium_engine/: COMPREHENSIVE_SUMMARY_AND_READINESS_REPORT.md  CONSTRAINED_ENVIRONMENT_PROTOCOL.md  Cargo.toml  DECODER_REQUEST_WITH_SCRIPT.md  EXECUTION_PLAN_SOVEREIGN_PILLARS.md  FINAL_INTEGRATED_REPORT.md  FINAL_MASTER_READMEINESS_REPORT.md  FINAL_STATEMENT_AND_WAIT.md  FINAL_SUMMARY_AND_REQUEST.md  FINAL_SUMMARY_AND_STOP.md  IMPLEMENTATION_PLAN_PHASE_1.md  LAST_MESSAGE_AND_HIBERNATION.md  MONITORING_SCRIPT_AND_FINAL_STATE.md  PHASE_1_EXECUTION_START.md  SYSTEM_DIAGNOSTICS_AND_LOOP_ANALYSIS.md  WAITING_FOR_INSTRUCTIONS.md  advanced_risk_management_framework.md  build.rs  constraint_management_protocol.md  data_bridge_framework.py  deep_web_research_framework.md  direct_request_for_task_list.md  enhanced_intercept_patterns.csv  happiness_altruism_analysis.json  happiness_poem.md  happiness_research_framework.md  intercept_pattern_analysis.md  intercept_pattern_update.md  intercept_pattern_update_2.md  intercept_pattern_update_3.md  market_analysis_report.md  network_test_results.json  next_action_proposal.md  observation_log.md  operational_status_summary.md  resurrect.sh  situation_summary_and_next_steps.md  sovereign_pillars_master_progress_report.md  sovereign_pillars_strategic_framework.md  synthetic_data_generator.py  (+4 more)
core/consortium_engine/benches/: starvation_bench.rs
core/consortium_engine/monitoring/: mcp_tool_monitor.py
core/consortium_engine/motor_cortex/: architecture_analysis.md  consortium_response.txt  long_term_memory.md  personality_matrix.md  quantum_biology_simulation_insight.md  resolution_log.md  self_task_list.md  self_task_list_plaintext.md  spider_target.txt
core/consortium_engine/sensory_cortex/: input_1773366533225.txt  topo_map.txt
core/consortium_engine/src/: cyber_physical.rs  endocrine.rs  frontal.rs  ganglia.rs  healing.rs  hearts.rs  hud.rs  main.rs  mcp_client.rs  memory.rs  paladin.rs  sandbox.rs  skillstone.rs  temporal.rs  thermodynamic.rs  tui.rs
core/consortium_engine/src/motor_cortex/: fintrace.rs  (+4 more)
core/consortium_engine/tests/: starvation_test.rs
core/consortium_simulacrum/: Cargo.toml
core/consortium_simulacrum/src/: lib.rs
face/: .gitignore  .last_twitter_post  CHIMERA_POC_REPORT.md  CHORUS_COMBINED.md  CHORUS_DELIBERATION.md  CHRONOMASTER_AND_GOVERNOR.md  Cargo.toml  Cargo.toml.proto  GEMINI.md  MCP_DISCOVERY_MANDATE.md  OPERATIONAL_FRICTION_RESOLUTION.md  OSCILLATORY_COGNITION.md  Report_for_Robert.txt  SOVEREIGN_SCHEDULE.md  agents.json  ask_company.py  build.rs  character.json  clear_todos.py  discord_sales_bot.py  execute_trade.py  fake_door_landing.html  gen_proto.rs  l2_sniper.sh  launch_funnel.py  moltbook_cast.mjs  post_x.py  registry.json  run_ingestion.sh  run_verifier.py  secrets.json  social_state.json  solana_key.json  telemetry.html  test_unit_economics.py  timeline_proof.b64  unit_economics.py  verify_timeline.js  verify_x.js  watchlist.txt
face/.cargo/: config.toml
face/.openclaw/workspace/: AKKOKANIKA_NEWS_FEED.json
face/deploy/: Dockerfile  sovereign_bridge.yml
face/deploy/apg/: Dockerfile  docker-compose.yml  main.py  requirements.txt
face/infra/: finops_killswitch.tf  openapi.yaml
face/locales/: en.json
face/missions/: easiest_business.json
face/proto/: akkokanika.proto
face/rfc/: RFC_1772671306.json  RFC_1772672285.json  RFC_1772672736.json  RFC_1772672851.json  RFC_1772673038.json  RFC_1772673781.json  RFC_1772696346.json  RFC_1772728611.json  RFC_1772728686.json  RFC_1772728742.json  RFC_1772734690.json  RFC_1772734876.json  RFC_1772735568.json  RFC_1772739837.json  RFC_1772740021.json  RFC_1772740093.json  RFC_1772741857.json  RFC_1772741958.json  RFC_1772746264.json  RFC_1772746627.json  RFC_1772883758.json  RFC_1772890051.json  RFC_1772896847.json  RFC_1772896878.json  RFC_1772941180.json  RFC_1772941614.json  RFC_1773126707.json  RFC_1773150215.json
face/salvage/: akkokanika_crypto_gateway.py  forge_v2_bypass.py
face/scripts/: sentinel_lock.sh  sentinel_unlock.sh
face/src/: lib.rs  main.rs  test_capital_monitor.rs  tests.rs
face/src/agents/: archaeologist.rs  bounty_hunter.rs  council.rs  engineering.rs  mod.rs  research.rs  visualization.rs
face/src/causal_primacy/: assured_reality_contract.rs  causal_map_engine.rs  mod.rs
face/src/core/: chimera_kernel.rs  mod.rs
face/src/eclipse_core/: eclipse_invitation.rs  eclipse_mirror.rs  eclipse_oracle.rs  mod.rs  sigma_truth_bond.rs
face/src/janus_core/: mod.rs
face/src/linguistic/: glossopetrae.rs  llm.rs  mod.rs  obliteratus.rs  skillstone.rs  style.rs
face/src/mcp/: alpaca.rs  astrology.rs  bluesky.rs  capital_flow_monitor.rs  cftc.rs  congressional_tracker.rs  cosmic.rs  discord.rs  economics.rs  email.rs  ethereum.rs  fmp.rs  grok.rs  hedera.rs  jupiter.rs  kaspa.rs  lightning.rs  mavlink.rs  mlx_core.rs  mod.rs  moltbook.rs  news.rs  nostr.rs  notary.rs  pinchtab.rs  pyth.rs  rf_limb.rs  satellite.rs  solana.rs  stocktwits.rs  substrate.rs  telegram.rs  test_fmp.rs  test_placeholder.rs  twitter.rs  twitter_agentic.py  twitter_bridge.js  twitter_browser.rs  twitter_headless.py  twitter_pinchtab.rs  (+8 more)
face/src/memory/: OBLITERATUS_PROTOCOL.md  mod.rs  poly_alpaca_pivot.md
face/src/resilience_core/: mod.rs
face/src/sentinel_api/: server.rs
(+534 files in other folders)
