[package]
name = "consortium_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rusqlite = "0.30"
bincode = "1.3"
tokio = { version = "1.36", features = ["full", "time"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"

# Cryptographic Lock (Ed25519)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["std"] }

# API Endpoint Server
axum = "0.7.5"

# The Brainstem - Native ML Inference (Metal Accelerated)
candle-core = { version = "0.8.2", features = ["metal", "accelerate"] }
candle-nn = { version = "0.8.2" }
candle-transformers = { version = "0.8.2" }
hf-hub = "0.3.2"

[build-dependencies]
cc = "1.0"
