[package]
name = "consortium_simulacrum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full", "time"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = "0.30"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
